<resources>
    <string name="app_name">Fast location transfer</string>
    <string name="app_desc">Fees may apply depending on when sending SMS plan.</string>

    <string name="menu_title_quick_location">Quick Location</string>
    <string name="menu_title_exact_location">Exact Location</string>
    <string name="menu_title_help">Help</string>
    <string name="menu_title_review">Review</string>
    <string name="menu_title_share">Share</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="msg_gps">You must use the location information.</string>
    <string name="msg_empty_location">Please find the location.</string>
    <string name="msg_fail_address">Failed to find the address. Location sharing is available.</string>
    <string name="msg_remove_contacts">Contact Deletes one.</string>
    <string name="msg_empty_input_number">Please enter the numbers.</string>
    <string name="msg_copy">It has been copied.</string>
    <string name="text_ok">ok</string>
    <string name="text_cancel">cancel</string>
    <string name="text_import_contacts">Import contacts(SMS)</string>
    <string name="text_contacts_writing">Contacts writing(SMS)</string>
    <string name="text_send">send</string>
    <string name="text_sms_send">Send SMS</string>
    <string name="text_119">119 of Korea\nFire,Rescue,Emergency,Disaster</string>
    <string name="text_112">112 of Korea\nCrime</string>
    <string name="text_emergency">All obligations of sms sent is for you !!</string>
    <string name="text_check_network">Network(In,Out)\naccuracy ●●○○○\nspeed●●●●●</string>
    <string name="text_check_gps">GPS(Outdoor)\naccuracy ●●●●●\nspeed●●●○○</string>
    <string name="text_waiting">Waiting...</string>
    <string name="text_map">map</string>
    <string name="text_latlng">lat,lon</string>
    <string name="text_address">addr</string>

    <string name="sms_success">Sent success</string>
    <string name="sms_fail">Sent fail</string>
    <string name="sms_no_area">Not the service area</string>
    <string name="sms_off_wireless">Wireless (Radio) is off</string>
    <string name="sms_pdu_null">PDU fail</string>

</resources>